syntax = "proto3";
package tappstore;

message TeaBalanceRequest {
  string account = 1;
  bytes tokenId = 2;
  bytes authKey = 3;
}
message TeaBalanceResponse {
  bytes balance = 1;
  bytes ts = 2;
}
message AccountAssetRequest {
  string account = 1;
  bytes tokenId = 2;
  bytes authKey = 3;
}
message AccountAssetResponse {
  bytes teaBalance = 1;
  bytes tokenBalance = 2;
  bytes reservedTokenBalance = 3;
}
message TokenAllowanceRequest {
  string account = 1;
  bytes tokenId = 2;
}
message TokenAllowanceResponse {
  bytes balance = 1;
}

message SignAndSendExtrinsicRequest {
  bytes extrinsicCall = 1;
  bytes tokenId = 2;
}
message SignAndSendExtrinsicResponse {
  string blockHash = 1;
}

message CheckUserSessionRequest {
  string account = 1;
  bytes tokenId = 2;
  bytes teaId = 3;
}
message CheckUserSessionResponse {
  bytes authKey = 1;
  bytes aesKey = 2;
  bytes tokenId = 3;
  string account = 4;
}

message GetConsumeAccountPubkeyRequest {
  bytes tokenId = 1;
}
message GetConsumeAccountPubkeyResponse {
  bytes publicKey = 1;
  string address = 2;
}

message QuerySyncStateRequest {
  bytes ts = 1;
}
message QuerySyncStateResponse {
  bytes result = 1;
}

message CommonSqlQueryRequest {
  oneof msg {
    QueryEntityListRequest QueryEntityListRequest = 1;
    QueryFavTappsRequest QueryFavTappsRequest = 2;
    QuerySeatListRequest QuerySeatListRequest = 3;
    QueryLeaderboardRequest QueryLeaderboardRequest = 4;
    QueryActiveMinerRequest QueryActiveMinerRequest = 5;
    QueryMinerEntityByTeaIdRequest QueryMinerEntityByTeaIdRequest = 6;
    QuerySeedAuctionListRequest QuerySeedAuctionListRequest = 7;
    QueryMachineInfoListRequest QueryMachineInfoListRequest = 8;
    QueryTwitterCandidateListRequest QueryTwitterCandidateListRequest = 9;
    QueryFluencerRefcodeRequest QueryFluencerRefcodeRequest = 10;
    QueryTappMetadataRequest QueryTappMetadataRequest = 11;
    QueryActiveMetadata QueryActiveMetadata = 12;
    QueryTxnGasFeeRequest QueryTxnGasFeeRequest = 13;
    QueryDevTappsRequest QueryDevTappsRequest = 14;
    QueryDevTappItemByNameRequest QueryDevTappItemByNameRequest = 15;
    QueryDevTappErrorLog QueryDevTappErrorLog = 16;
  }
}

message QueryEntityListRequest {
  bool onlyTapp = 1;
  string from = 2;
  bytes tokenId = 3;
}
message QueryTappMetadataRequest {
  string tokenId = 3;
}

message QueryFavTappsRequest {
  string user = 1;
}
message QuerySeatListRequest {
  bytes maintainer = 1;
  bytes dealUser = 2;
}
message QueryLeaderboardRequest {}
message QuerySeedAuctionListRequest {}
message QueryMachineInfoListRequest {
  string owner = 1;
}
message QueryActiveMinerRequest {}
message QueryActiveMetadata {
  optional string ticker = 1;
  optional uint64 cml_id = 2;
}
message QueryMinerEntityByTeaIdRequest {
  string tea_id = 1;
}

message QueryTwitterCandidateListRequest {
  string token_id = 1;
}
message QueryFluencerRefcodeRequest {}
message QueryTxnGasFeeRequest {}
message QueryDevTappsRequest {
  string owner = 1;
}
message QueryDevTappItemByNameRequest {
  string name = 1;
}
message QueryDevTappErrorLog {
  string token_id = 1;
}

message CommonSqlQueryResponse {
  bytes data = 1;
  string err = 2;
}

message PushNotificationsInnerRequest {
  bytes tokenId = 1;
  repeated string accounts = 2;
  repeated uint32 expired_heights = 3;
  string uuid = 4;
  bytes tsid = 5;
}

message QueryMinerInfoRequest {
  bytes teaId = 1;
  uint32 atHeight = 2;
  bool findAtHeight = 3;
}

message QueryMiningVariableRequest {
  bytes teaId = 1;
}

message QueryNodeProfileByConnId {
  string connId = 1;
}

message QueryNodeProfileByTeaId {
  bytes teaId = 1;
}

message QueryNodeProfilesByTeaIds {
  repeated bytes teaIds = 1;
}

message QueryNodeProfilesByConnIds {
  repeated string connIds = 1;
}

message QueryActiveNodes {
  bool hasExclude = 2;
  bytes excludeTeaId = 3;
}

message QueryActiveSeats {
  bool hasExclude = 2;
  bytes excludeTeaId = 1;
}
