syntax = "proto3";
package third_api;

message ThirdApiGeneralRequest {
	oneof msg {
		GetQueryRequest GetQueryRequest = 1;
		PostQueryRequest PostQueryRequest = 2;
		CryptPostRequest CryptPostRequest = 3;
	}
}

message GetQueryRequest {
  bytes url = 1;
  bytes header = 2;
}
message PostQueryRequest {
	bytes url = 1;
	bytes header = 2;
	bytes payload = 3;
}
message CryptPostRequest {
	bytes url = 1;
	bytes header = 2;
	bytes payload = 3;
}

message ThirdAPiGeneralResponse {
	bool success = 1;
	string error = 2;
  string data = 3;
}



